Initial site draft based on frictionlessdata site template

--- a/index.html
+++ b/index.html
@@ -15,26 +15,23 @@ js:
 
   <div class="wrapper">
     <div>
-        <h2>Data Packages</h2>
-        <p>Data Packages are a lightweight containerization format for data. They provide the foundation for <em>frictionless</em> data transport.</p>
-        <a href="{{ "/data-packages/" | prepend: site.baseurl }}">Find Out More</a>
+        <h2>Data</h2>
+        <p>Our Open Skills Project publishes standardized job titles, skills, and training outcomes to provide the foundation of a more <em>open, connected and interoperable</em> workforce data ecosystem.</p>
+        <a href="/data/">Explore Data</a>
       </div>
       <div>
         <div>
-          <h2>Tooling & Integration</h2>
-          <p>Tools and integrations to make it easy to integrate Data Packages into your data processing and publishing workflows.</p>
-          <a href="{{ "/tools/" | prepend: site.baseurl }}">Browse Tools</a>
+          <h2>Tools</h2>
+          <p>Our Training Provider Outcomes Toolkit provides a set of open source tools that to make it easy to collect, connect, analyze, and aggregate data on education and training outcomes.</p>
+          <a href="/tools/">Browse Tools</a>
        </div>
       </div>
       <div>
         <div>
-          <h2>Guides</h2>
-          <p>
-            Learn how to get started using and developing with Data
-            Packages through our guides, tutorials and documentation.
-          </p>
-          <a href="{{ "/guides/" | prepend: site.baseurl }}">Guides</a>
-        </div>
+          <h2>Working Groups</h2>
+          <p>Our open skills data and open source tools are developed collaboratively through technical working groups staffed by government, industry, academica, and nonprofit institutions.</p>
+          <a href="/get-involved/">Get Involved</a>
+       </div>
       </div>
   </div>
 </div>
