Update text throughout

--- a/get-involved/index.html
+++ b/get-involved/index.html
@@ -2,7 +2,7 @@
 title: Get Involved
 ---
 
-<p>Data@Work is a major project of <a href="https://dsapp.org/">the University of Chicago's Center for Data Science and Public Policy</a>, the Department of Labor, the National Skills Coalition, and a large set of community stakeholders.  Community building continues to be a core component of the project: <strong>anyone can get involved and contributions are very welcome</strong>.</p>
+<p>Data at Work is a major project of <a href="https://dsapp.org/">the University of Chicago's Center for Data Science and Public Policy</a>, the Department of Labor, the National Skills Coalition, and a large set of community stakeholders.  Community building continues to be a core component of the project: <strong>anyone can get involved and contributions are very welcome</strong>.</p>
 
 <p>In order to make creating, using, and sharing workforce data as easy and frictionless as possible, we need <strong>concrete use cases</strong> and <strong>feedback</strong> from people working across government, industry, and academia:</p>
 
@@ -17,11 +17,11 @@ title: Get Involved
 
 <h2 id="contact">Contact</h2>
 
-<p>If you're not sure where to start, there are lots of ways to get in contact with the core team members as well as the broader community around Data@Work</p>
+<p>If you're not sure where to start, there are lots of ways to get in contact with the core team members as well as the broader community around Data at Work</p>
 
 <h3 id="forum">Forum</h3>
 
-<p>If you have a use case that you'd like to see Data@Work support, leave a note in the <a href="https://discuss.okfn.org/c/frictionless-data">forum</a>.</p>
+<p>If you have a use case that you'd like to see Data at Work support, leave a note in the <a href="https://discuss.okfn.org/c/frictionless-data">forum</a>.</p>
 
 <h3 id="chat">Chat</h3>
 
@@ -33,6 +33,6 @@ title: Get Involved
 
 <h3 id="newsletter">Newsletter</h3>
 
-<p>Sign up for our newsletter to receive updates on tooling or specification releases, events, and other news related to Data@Work.</p>
+<p>Sign up for our newsletter to receive updates on tooling or specification releases, events, and other news related to Data at Work.</p>
   
 {% include newsletter.html %}
