--- a/index.html
+++ b/index.html
@@ -18,21 +18,17 @@ js:
         <h2>Data</h2>
         <p>Our Open Skills Project publishes standardized job titles, skills, and training outcomes to provide the foundation of a more <em>open, connected and interoperable</em> workforce data ecosystem.</p>
         <a href="/data/">Explore Data</a>
-      </div>
-      <div>
-        <div>
-          <h2>Tools</h2>
-          <p>Our Training Provider Outcomes Toolkit provides a set of open source tools that to make it easy to collect, connect, analyze, and aggregate data on education and training outcomes.</p>
-          <a href="/tools/">Browse Tools</a>
-       </div>
-      </div>
-      <div>
-        <div>
-          <h2>Working Groups</h2>
-          <p>Our open skills data and open source tools are developed collaboratively through technical working groups staffed by government, industry, academica, and nonprofit institutions.</p>
-          <a href="/get-involved/">Get Involved</a>
-       </div>
-      </div>
+		<hr />
+	  <h2>Tools</h2>
+	  <p>Our Training Provider Outcomes Toolkit provides a set of open source tools that to make it easy to collect, connect, analyze, and aggregate data on education and training outcomes.</p>
+	  <a href="/tools/">Browse Tools</a>
+	  <hr />
+	  <h2>Working Groups</h2>
+	  <p>Our open skills data and open source tools are developed collaboratively through technical working groups staffed by government, industry, academica, and nonprofit institutions.</p>
+	  <a href="/get-involved/">Get Involved</a>
+  </div>
+  <div>
+	  <a class="twitter-timeline" href="https://twitter.com/data_at_work">Tweets by data_at_work</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
 </div>
 
