Add section on skills-ml, sunset get involved page

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ js:
         <p>Our Open Skills Project publishes standardized job titles, skills, and training outcomes to provide the foundation of a more <em>open, connected and interoperable</em> workforce data ecosystem.</p>
         <a href="/data/">Explore Data</a>
 		<hr />
-	  <h2>Tools</h2>
-	  <p>Our Training Provider Outcomes Toolkit provides a set of open source tools that to make it easy to collect, connect, analyze, and aggregate data on education and training outcomes.</p>
-	  <a href="/tools/">Browse Tools</a>
+	  <h2>Skills-ML</h2>
+	  <p>Skills-ML is an open-source Python library for developing and analyzing skills and competencies from unstructured text.</p>
+	  <a href="/skills-ml/">Read More about Skills-ML</a>
 	  <hr />
 	  <h2>Working Groups</h2>
 	  <p>Our open skills data and open source tools are developed collaboratively through technical working groups staffed by government, industry, academica, and nonprofit institutions.</p>
